added blocks for game using js

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .grid
 {
     position: absolute;
-    width: 600px;
+    width: 560px;
     height: 300px;
     border: solid black 3px;
 
@@ -12,6 +12,13 @@
     position: absolute;
     width: 100px;
     height: 20px;
-    background-color: firebrick;
-    
+    background-color: firebrick;   
+}
+
+.user
+{
+    position: absolute;
+    width: 100px;
+    height: 20px;
+    background-color:bisque;   
 }
