--- a/style.css
+++ b/style.css
@@ -22,3 +22,12 @@
     height: 20px;
     background-color:bisque;   
 }
+
+.ball
+{
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    background-color: red;
+}
